--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .header {
     background-color: aquamarine;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Lucida Console', Monaco, monospace;
 }
 body {
     background-color: bisque;
