--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,7 @@ body {
     font-family: 'Courier New', monospace;
     font-weight: 700;
 }
+.ingredients,
+.steps{
+    font-family: Monaco, monospace;
+}
